kaufman section z-index fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -163,7 +163,6 @@
   list-style: none;
   padding: 0;
   position: relative;
-  z-index: 1;
 }
 
 .table__cell {
@@ -232,14 +231,13 @@
   padding: 90px 0;
   overflow: hidden;
   position: relative;
+  z-index: 1;
 }
 
 .section-title_theme_dark,
 .section-subtitle_theme_dark,
 .table__cell_theme_dark {
   color: #fff;
-  position: relative;
-  z-index: 1;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -257,6 +255,7 @@
   right: -210px;
   width: 877px;
   height: 877px;
+  z-index: -1;
 }
 /* end kaufman section styles */
 
